envoy/bandwidth/envoy.yaml
---

static_resources:
  clusters:
  - name: protected-service
    type: LOGICAL_DNS
    connect_timeout: 10s
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: protected-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 8080
  - name: unprotected-service
    type: LOGICAL_DNS
    connect_timeout: 10s
    lb_policy: ROUND_ROBIN
    dns_lookup_family: V4_ONLY
    load_assignment:
      cluster_name: unprotected-service
      endpoints:
      - lb_endpoints:
        - endpoint:
            address:
              socket_address:
                address: server
                port_value: 8080
  listeners:
  - address:
      socket_address:
        address: 0.0.0.0
        port_value: 10000
    filter_chains:
    - filters:
      - name: envoy.filters.network.http_connection_manager
        typed_config:
          "@type": type.googleapis.com/envoy.extensions.filters.network.http_connection_manager.v3.HttpConnectionManager
          stat_prefix: ingress_bandwidth
          route_config:
            name: local_route
            virtual_hosts:
            - name: protected-service
              domains:
              - "*"
              routes:
              - match:
                  prefix: /protected
                route:
                  cluster: protected-service
                  prefix_rewrite: /
                typed_per_filter_config:
                  envoy.filters.http.bandwidth_limit:
                    "@type": type.googleapis.com/envoy.extensions.filters.http.bandwidth_limit.v3alpha.BandwidthLimit
                    stat_prefix: bandwidth_limiter_custom_route
                    enable_mode: REQUEST
                    limit_kbps: 60000
                    fill_interval: 0.1s
              - match:
                  prefix: /unprotected
                route:
                  cluster: unprotected-service
                  prefix_rewrite: /
          http_filters:
          - name: envoy.filters.http.bandwidth_limit
            typed_config:
              "@type": type.googleapis.com/envoy.extensions.filters.http.bandwidth_limit.v3alpha.BandwidthLimit
              stat_prefix: bandwidth_limiter_default
          - name: envoy.filters.http.router
